# InternPilot

./: .env.example  .gitignore  API_CONTRACT.md  Blog.md  DOCUMENTATION.md  Internpilot master spec.md  LICENSE  README.md  alembic.ini  pyproject.toml  test_resume.docx
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_profile.py  0003_postings.py  0004_match_index.py  0005_add_source_sightings.py  0006_applications.py  0007_outcomes.py  0008_referrals.py  0009_globalisation.py  0010_university_canonical.py  0011_interview_prep.py  0012_evaluations.py  0013_notifications.py  0014_research.py  0016_timestamp_fields.py  0020_research_url_unique.py
app/: main.py
app/api/v1/: admin.py  applications.py  auth.py  dashboard.py  evaluation.py  health.py  integrations.py  interview_prep.py  matches.py  notifications.py  postings.py  profile.py  referrals.py  research.py
app/core/: config.py  database.py  errors.py  security.py
app/llm/: embeddings.py  extract.py  router.py
app/models/: application.py  artifact.py  base.py  company.py  contact.py  evaluation.py  interview_prep.py  notification.py  outcome.py  posting.py  profile.py  referral.py  research_opportunity.py  research_outreach.py  user.py
app/schemas/: application.py  auth.py  dashboard.py  evaluation.py  interview_prep.py  match.py  notification.py  posting.py  profile.py  referral.py  research.py
app/services/: aggregation_service.py  application_service.py  auth_service.py  base.py  cohort_service.py  contact_scraper.py  dashboard_service.py  eval_grounding_service.py  eval_matching_service.py  evaluation_service.py  ghost_service.py  interest_aggregation_service.py  interview_prep_service.py  matching_service.py  notification_service.py  profile_service.py  referral_service.py  research_aggregation_service.py  research_service.py  tracker_service.py  university_normalizer.py
app/sources/: adzuna.py  ashby.py  base.py  config.py  firecrawl_india.py  firecrawl_research.py  greenhouse.py  lever.py  normalize.py  remoteok.py  remotive.py
frontend/src/: vite-env.d.ts
frontend/src/components/: nav.tsx
frontend/src/lib/: api-client.ts
frontend/src/routes/: assistant.tsx  auth.tsx  dashboard.tsx  feed.tsx  index.tsx  onboarding.tsx  outreach.tsx  pitch.tsx  referrals.tsx
scripts/: check_tables.py  clear_postings.py  journey_smoke.py  live_data_pipeline.py  probe_lever.py  probe_refresh.py  probe_slugs.py  probe_sources.py  seed_alumni.py  seed_demo.py  seed_research.py  smoke_replay.py  smoke_research_prep.py
tests/: conftest.py  test_applications.py  test_auth.py  test_dashboard.py  test_embeddings.py  test_eval_grounding.py  test_eval_matching.py  test_evaluation.py  test_ghost.py  test_health.py  test_interview_prep.py  test_llm.py  test_matches.py  test_notifications.py  test_postings.py  test_profile.py  test_referrals.py  test_research.py  test_response_likelihood.py  test_tracker.py  test_university_normalizer.py
