[project]
name = "internpilot"
version = "0.1.0"
description = "InternPilot backend — Module 0 base layer"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "google-auth>=2.36.0",
    "google-generativeai>=0.8.0",
    "groq>=0.13.0",
    "openai>=1.58.0",
    "torch",
    "sentence-transformers>=3.3.0",
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
    "scikit-learn>=1.5.0",
    "structlog>=24.4.0",
    "pdfplumber>=0.11.9",
    "python-docx>=1.2.0",
    "httpx>=0.28.1",
    "google-genai>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Force CPU-only PyTorch — no GPU needed for sentence-transformers embeddings.
# CPU wheel is ~200 MB vs ~2 GB for the default CUDA wheel.
# ---------------------------------------------------------------------------
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "types-passlib>=1.7.7",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]  # B008: function calls in default args (FastAPI Depends)

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "google.generativeai.*",
    "google.oauth2.*",
    "google.auth.*",
    "sentence_transformers.*",
    "passlib.*",
    "jose.*",
    "pgvector.*",
    "groq.*",
    "pdfplumber.*",
    "docx.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
